[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lobby/Lobby2.gd" type="Script" id=1]
[ext_resource path="res://Lobby/World.gd" type="Script" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_bottom = 1.0
margin_right = 181.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonNew" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 364.0
margin_right = 181.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 36 )
text = "New Game"

[node name="buttonLoad" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 404.0
margin_right = 181.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 36 )
text = "Load Game"

[node name="buttonJoin" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 444.0
margin_right = 181.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
text = "Join Online Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonHost" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 484.0
margin_right = 181.0
margin_bottom = 520.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
text = "Host Online Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSettings" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 524.0
margin_right = 181.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 36 )
text = "Settings"

[node name="buttonQuit" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 564.0
margin_right = 181.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 36 )
text = "Quit"

[node name="PopupPanel" type="PopupPanel" parent="MainMenu"]
visible = true
margin_left = 160.0
margin_top = 160.0
margin_right = 657.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/PopupPanel/VBoxContainer"]
margin_right = 489.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MainMenu/PopupPanel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 242.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "IP Address"
align = 1

[node name="IPEdit" type="LineEdit" parent="MainMenu/PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 246.0
margin_right = 489.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/PopupPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 489.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MainMenu/PopupPanel/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 242.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Port"
align = 1

[node name="PortEdit" type="LineEdit" parent="MainMenu/PopupPanel/VBoxContainer/HBoxContainer2"]
margin_left = 246.0
margin_right = 489.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4242"

[node name="Name" type="HBoxContainer" parent="MainMenu/PopupPanel/VBoxContainer"]
margin_top = 56.0
margin_right = 489.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MainMenu/PopupPanel/VBoxContainer/Name"]
margin_top = 5.0
margin_right = 242.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Name"
align = 1

[node name="NameEdit" type="LineEdit" parent="MainMenu/PopupPanel/VBoxContainer/Name"]
margin_left = 246.0
margin_right = 489.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttonConfirm" type="Button" parent="MainMenu/PopupPanel/VBoxContainer"]
margin_top = 84.0
margin_right = 489.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Confirm"

[node name="Players" type="Node" parent="."]

[node name="World" type="Node2D" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="MainMenu/VBoxContainer/buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/buttonHost" to="." method="_on_buttonHost_pressed"]
[connection signal="text_changed" from="MainMenu/PopupPanel/VBoxContainer/HBoxContainer/IPEdit" to="." method="_on_IPEdit_text_changed"]
[connection signal="text_changed" from="MainMenu/PopupPanel/VBoxContainer/HBoxContainer2/PortEdit" to="." method="_on_PortEdit_text_changed"]
[connection signal="text_changed" from="MainMenu/PopupPanel/VBoxContainer/Name/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="MainMenu/PopupPanel/VBoxContainer/buttonConfirm" to="." method="_on_buttonConfirm_pressed"]
